# gth-scientia-ti

./: .env  .env.example  .gitignore  .uvicornignore  BACKLOG.md  DEVOPS.md  Dockerfile  README.md  SECURITY.md  create_fullstack_project.sh  crud.py  database.py  dependencies.py  docker-compose.yml  gitignore  main.py  make_migrations.sh  models.py  old.txt  old_requirements.txt  package-lock.json  pyproject.toml  render.yaml  requirements.txt  schemas.py  scientia_postman_collection.json  start.sh
.postman/: config.json
backend_fastapi/: .gitignore  README.md  app.py  crud.py  database.py  dependencies.py  docker-compose.yml  main.py  models.py  openapi.yaml  package.json  pyproject.toml  render.yaml  requirements.txt  schemas.py
backend_fastapi/.github/workflows/: frontend-build.yml
backend_fastapi/backend/: package.json  tsconfig.json
backend_fastapi/backend/src/: index.ts
backend_fastapi/backend_fastapi/: README.md  init_db.py  main.py  models.py  schemas.py
backend_fastapi/backend_fastapi/routers/: engine.py  tax_simulation.py
backend_fastapi/frontend/: Dockerfile  package.json
backend_fastapi/frontend/src/: App.jsx  App.tsx
backend_fastapi/frontend/src/components/: Toolbox.jsx
backend_fastapi/frontend/src/pages/: BuilderWorkflow.jsx  Login.jsx  TaxSimulation.jsx
backend_fastapi/routers/: __init__.py  admin.py  ai.py  auth.py  companies.py  engine.py  health.py  rules.py  tax_simulation.py  users.py  workflows.py  xml_parser.py
backend_fastapi/services/: ai_service.py  simples_service.py  tax_engine.py  tax_service.py  xml_parser_service.py
(+49 files in other folders)
