[tool.poetry]
name = "gth-backend"
version = "0.1.0"
description = "GTH Scientia TI Backend"
authors = ["Rhalf Augusto <dev@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"